# InformationRecommendation

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: auth.py  crawler.py  elasticsearch_admin.py  news.py  organization.py  rbac.py  recommendation.py  users.py
app/core/: __init__.py  clickhouse.py  config.py  connections.py  database.py  elasticsearch.py  permissions.py  redis.py  security.py
app/crawler/: __init__.py  base.py  cleaner.py  deduplication.py  parser.py
app/models/: __init__.py  news.py  rbac.py  system.py  topic.py  user.py
app/schemas/: auth.py  crawler.py  organization.py  rbac.py  user.py
app/services/: __init__.py  auth.py  crawler.py  elasticsearch_index.py  news.py  news_indexing.py  nlp.py  organization.py  rbac.py  recommendation.py  user.py  user_profile.py
docs/: elasticsearch_indexing.md
scripts/: init_elasticsearch.py
tests/: test_database_connections.py
tests/property/: __init__.py  test_auth_properties.py  test_crawler_properties.py  test_news_search_properties.py  test_nlp_properties.py  test_organization_properties.py  test_rbac_properties.py  test_recommendation_properties.py  test_user_properties.py
tests/unit/: __init__.py  test_elasticsearch_indexing.py  test_models.py  test_user_profile.py
