[project]
name = "intelligent-recommendation-system"
version = "0.1.0"
description = "Intelligent Information Recommendation System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    # PostgreSQL
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    # Elasticsearch
    "elasticsearch[async]>=8.12.0",
    # Redis
    "redis>=5.0.1",
    # ClickHouse
    "clickhouse-connect>=0.7.0",
    # Configuration
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Utilities
    "python-dotenv>=1.0.0",
    # Authentication
    "bcrypt>=4.1.0",
    "pyjwt>=2.8.0",
    # Crawler
    "beautifulsoup4>=4.12.0",
    "httpx>=0.26.0",
    "lxml>=5.0.0",
    # NLP
    "langdetect>=1.0.9",
    "jieba>=0.42.1",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.98.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
